--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_CRYSTALLIZE_TENANT_IDENTIFIER=nervous-ghost
 NEXT_PUBLIC_SERVICE_API_URL=https://service-api-demo.superfast.shop/api/graphql
 SITE_URL=https://nervousghost.com
+STATIC_FORMS_ACCESS_KEY=afcb6ade-aa08-46a8-a6c9-7ca6ae8a9ebe
