--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@crystallize/react-image": "6.1.0",
     "@crystallize/react-layout": "3.2.0",
     "@crystallize/react-video": "1.6.3",
+    "@react-aria/interactions": "^3.7.0",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.8.0",
     "immer": "8.0.1",
